--- a/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
@@ -18,6 +18,14 @@
             android:visibility="visible"/>
 
         <Button
+            android:id="@+id/close_button"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/close_button" />
+
+        <Button
             android:id="@+id/refresh_button"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
