--- a/SportsSideKick/app/src/main/res/drawable/button_login_HOME.xml
+++ b/SportsSideKick/app/src/main/res/drawable/button_login_HOME.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#4b000000" />
+        android:color="#000000" />
     <stroke
         android:width="2dp"
-        android:color="@color/light_green_1" />
+        android:color="#000000" />
     <corners
         android:radius="48dp" />
 </shape>
