--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -43,22 +43,24 @@
 
     <style name="button_facebook">
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_facebook</item>
+        <!--<item name="android:background">@drawable/button_facebook</item>-->
         <item name="android:padding">4dp</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:minHeight">0dp</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="edit_text_login">
-        <item name="android:textColor">@color/lightGrey</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/button_login_home</item>
-        <item name="android:padding">4dp</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:gravity">center</item>
         <item name="android:maxLines">1</item>
         <item name="android:layout_margin">5dp</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColorHint">@color/lightGrey</item>
     </style>
 
