--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -9,7 +9,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:id="@+id/profile_image_container"
+        android:id="@+id/profile_image"
         android:layout_width="@dimen/message_item_circle_image_size"
         android:layout_height="@dimen/message_item_circle_image_size"
         android:layout_marginStart="@dimen/margin_8"
