--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -50,27 +50,37 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:maxLines="2"
+        android:maxLines="1"
         android:text="Demo caption Demo caption Demo caption Demo caption"
+        android:ellipsize="marquee"
         android:textColor="@color/white"
         android:textSize="9sp" />
+
+    <View
+        android:id="@+id/alignment_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBaseline="@+id/people_count_value"/>
 
     <ImageView
         android:id="@+id/people_icon"
         android:layout_width="10dp"
+        android:layout_above="@+id/alignment_view"
         android:layout_height="10dp"
-        android:layout_below="@+id/caption"
+        android:layout_toEndOf="@+id/alignment_view"
+        android:layout_marginStart="@dimen/half_margin"
         android:layout_centerHorizontal="true"
         android:src="@drawable/user_count_icon" />
 
     <TextView
         android:id="@+id/people_count_value"
         android:layout_width="wrap_content"
+        android:layout_below="@+id/caption"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/people_icon"
-        android:layout_toEndOf="@+id/people_icon"
+        android:includeFontPadding="false"
+        android:layout_toStartOf="@+id/people_icon"
         android:text="3"
         android:textColor="@color/white"
         android:textSize="12sp" />
