--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="500dp"
     android:layout_height="match_parent">
 
@@ -85,12 +86,22 @@
         android:background="@drawable/popup_login_button_background">
 
         <TextView
+            android:id="@+id/login_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="@string/login_login"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:layout_centerInParent="true"/>
+            android:textSize="18sp" />
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/login_progress_bar"
+            android:layout_width="@dimen/prodgres_bar"
+            android:layout_height="@dimen/prodgres_bar"
+            android:elevation="2dp"
+            app:indicatorName="LineSpinFadeLoaderIndicator"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
@@ -98,16 +109,16 @@
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimarySemiLight"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/top_split_line"
-        android:layout_alignParentStart="true">
+        android:background="@color/colorPrimarySemiLight">
 
         <LinearLayout
             android:layout_width="@dimen/login_conteiner_width"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_centerInParent="true"
-            android:layout_marginTop="@dimen/margin_40">
+            android:layout_marginTop="@dimen/margin_40"
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/login_email"
@@ -115,19 +126,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_login_email"
+                android:inputType="textEmailAddress"
                 android:text="user2@user2.com"
-                android:textAlignment="textStart"
-                android:inputType="textEmailAddress" />
+                android:textAlignment="textStart" />
 
             <EditText
                 android:id="@+id/login_password"
                 style="@style/edit_text_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="qwerty"
-                android:textAlignment="textStart"
                 android:hint="@string/login_login_password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:text="qwerty"
+                android:textAlignment="textStart" />
 
             <TextView
                 android:id="@+id/forgot_button"
