--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="500dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <!-- TOP BUTTONS CONTAINER -->
@@ -78,12 +79,22 @@
         android:background="@drawable/popup_login_button_background">
 
         <TextView
+            android:id="@+id/sign_up_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/sign_up_sign_up"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp" />
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/sign_up_progress_bar"
+            android:layout_width="@dimen/prodgres_bar"
+            android:layout_height="@dimen/prodgres_bar"
+            android:elevation="2dp"
+            app:indicatorName="LineSpinFadeLoaderIndicator"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
