--- a/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
@@ -137,6 +137,7 @@
                     android:progressDrawable="@drawable/circular_progress_bar" />
 
                 <ImageView
+                    android:id="@+id/your_profile_image"
                     android:layout_width="@dimen/popup_friend_profil_profile_image_size"
                     android:layout_height="@dimen/popup_friend_profil_profile_image_size"
                     android:layout_centerHorizontal="true"
@@ -168,6 +169,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/your_profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignEnd="@id/profile_image_container"
@@ -467,6 +469,17 @@
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/edit_button" />
+
+        <ImageButton
+            android:id="@+id/logout_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:background="@null"
+            android:layout_toRightOf="@id/edit_button"
+            android:scaleType="centerInside"
+            android:src="@drawable/logout_button" />
     </RelativeLayout>
 
     <View
