--- a/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/popup_friend_request_width"
     android:layout_height="@dimen/popup_friend_request_height"
     android:background="@drawable/popup_bottom_background_dark"
@@ -22,6 +23,15 @@
         android:layout_height="1dp"
         android:layout_below="@+id/caption"
         android:background="@android:color/black" />
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_bar"
+        android:layout_width="@dimen/prodgres_bar"
+        android:layout_height="@dimen/prodgres_bar"
+        android:layout_centerInParent="true"
+        android:elevation="2dp"
+        app:indicatorName="LineSpinFadeLoaderIndicator" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/requests_recycler_view"
         android:layout_width="match_parent"
