--- a/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:layout_marginBottom="@dimen/margin_60"
     android:layout_marginEnd="@dimen/margin_90"
     android:layout_marginStart="@dimen/margin_90"
@@ -143,7 +144,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:contentDescription="@string/image"
-                    android:src="@drawable/demo_profile_image" />
+                    android:src="@drawable/blank_profile_rounded" />
             </RelativeLayout>
 
             <ImageView
@@ -157,6 +158,7 @@
                 android:src="@drawable/next_level_marker" />
 
             <TextView
+                android:id="@+id/profile_image_level"
                 android:layout_width="@dimen/profile_level_marker_size"
                 android:layout_height="@dimen/profile_level_marker_size"
                 android:layout_alignEnd="@id/profile_image_container"
@@ -177,7 +179,7 @@
                 android:layout_below="@id/profile_image_container"
                 android:layout_marginTop="@dimen/margin_15"
                 android:gravity="center"
-                android:text="Football Fann Name"
+                android:text="Login / Signup"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -407,6 +409,7 @@
                     android:src="@drawable/next_level_marker" />
 
                 <TextView
+                    android:id="@+id/next_caps_value"
                     android:layout_width="@dimen/popup_your_friends_next_level_cointainer_text_size"
                     android:layout_height="@dimen/popup_your_friends_next_level_cointainer_text_size"
                     android:layout_centerInParent="true"
