--- a/SportsSideKick/app/src/main/res/layout/row_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_rumours.xml
@@ -1,51 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/row_rumors_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:paddingStart="@dimen/half_margin"
-        android:paddingEnd="@dimen/padding_8"
-        android:paddingTop="@dimen/padding_8"
-        android:paddingBottom="@dimen/padding_8"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:maxLines="1"
-        android:text="time"
-        android:textColor="@color/colorAccent"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp">
 
-    <TextView
-        android:id="@+id/row_rumors_description_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@id/row_rumors_time"
-        android:paddingStart="@dimen/half_margin"
-        android:paddingEnd="@dimen/half_margin"
-        android:paddingTop="@dimen/padding_8"
-        android:paddingBottom="@dimen/padding_8"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:maxLines="1"
-        android:maxEms="8"
-        android:textColor="@color/colorPrimaryLight"/>
+        <TextView
+            android:id="@+id/row_rumors_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/margin_15"
+            android:layout_marginRight="@dimen/margin_15"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="text"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/row_rumors_description"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:paddingStart="@dimen/padding_8"
-        android:paddingEnd="@dimen/half_margin"
-        android:paddingTop="@dimen/padding_8"
-        android:paddingBottom="@dimen/padding_8"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:maxLines="1"
-        android:layout_toStartOf="@id/row_rumors_description_info"
-        android:textColor="@color/white"/>
+        android:layout_gravity="center_vertical"
+        android:layout_marginBottom="@dimen/margin_15"
+        android:layout_marginLeft="@dimen/margin_15"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="1dp"
+            android:background="@color/light_green_2" />
+
+        <TextView
+            android:id="@+id/row_rumors_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="@dimen/margin_5"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/lightGrey" />
+    </LinearLayout>
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/row_rumors_description_info"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_toStartOf="@id/row_rumors_time"-->
+    <!--android:paddingStart="@dimen/half_margin"-->
+    <!--android:paddingEnd="@dimen/half_margin"-->
+    <!--android:paddingTop="@dimen/padding_8"-->
+    <!--android:paddingBottom="@dimen/padding_8"-->
+    <!--android:ellipsize="end"-->
+    <!--android:singleLine="true"-->
+    <!--android:maxLines="1"-->
+    <!--android:maxEms="8"-->
+    <!--android:textColor="@color/colorPrimaryLight"/>-->
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentEnd="true"
+        android:background="@color/green_dark_2" />
+
+</LinearLayout>
