--- a/SportsSideKick/app/src/main/res/layout/popup_modal.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_modal.xml
@@ -3,7 +3,8 @@
     android:layout_width="360dp"
     android:layout_height="wrap_content"
     android:background="@drawable/popup_bottom_background_dark"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
