--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -4,7 +4,8 @@
     android:layout_width="544dp"
     android:layout_height="match_parent"
     android:background="@color/colorPrimarySemiLight"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
 
     <View
         android:id="@+id/top_vertical_spliter"
