--- a/SportsSideKick/app/src/main/res/layout/popup_language.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_language.xml
@@ -3,7 +3,8 @@
     android:layout_width="400dp"
     android:layout_height="400dp"
     android:background="@drawable/popup_bottom_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/caption"
@@ -138,7 +139,8 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/popup_bottom_background">
+        android:background="@drawable/popup_bottom_background"
+        android:clickable="true">
 
         <View
             android:id="@+id/bottom_split_line"
