--- a/SportsSideKick/app/src/main/res/layout/popup_manage_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_manage_chat.xml
@@ -3,7 +3,8 @@
     android:layout_width="@dimen/popup_manage_chat_width"
     android:layout_height="match_parent"
     android:background="@color/colorPrimarySemiLight"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
 
     <View
         android:id="@+id/top_vertical_spliter"
