--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -105,7 +105,8 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimarySemiLight"
         android:layout_below="@+id/top_split_line"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:clickable="true">
 
         <LinearLayout
             android:layout_width="@dimen/login_conteiner_width"
