--- a/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
@@ -6,7 +6,8 @@
     android:layout_marginBottom="@dimen/margin_60"
     android:layout_marginEnd="@dimen/margin_90"
     android:layout_marginStart="@dimen/margin_90"
-    android:layout_marginTop="@dimen/margin_60">
+    android:layout_marginTop="@dimen/margin_60"
+    android:clickable="true">
 
     <!-- TOP BUTTONS CONTAINER -->
     <RelativeLayout
@@ -81,7 +82,8 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/popup_your_friends_bottom_buttons_container"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/popup_bottom_background">
+        android:background="@drawable/popup_bottom_background"
+        android:clickable="true">
 
         <View
             android:id="@+id/bottom_split_line"
