--- a/SportsSideKick/app/src/main/res/layout/popup_your_statement.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_statement.xml
@@ -3,7 +3,8 @@
     android:layout_width="@dimen/popup_your_statement_size"
     android:layout_height="@dimen/popup_your_statement_size"
     android:background="@drawable/popup_bottom_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
