--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -169,7 +169,7 @@
                 android:inputType="text" />
 
             <EditText
-                android:id="@+id/sign_up_username"
+                android:id="@+id/sign_up_display_name"
                 style="@style/edit_text_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
