--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -548,6 +548,7 @@
                 android:layout_marginLeft="@dimen/margin_20"
                 android:layout_marginRight="@dimen/margin_20"
                 android:adjustViewBounds="true"
+                android:onClick="onFollowersButtonClick"
                 android:src="@drawable/icon_followers" />
         </LinearLayout>
 
