--- a/SportsSideKick/app/src/main/res/layout/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_item.xml
@@ -2,13 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="20dp">
 
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="@dimen/friend_item_image"
         android:layout_height="@dimen/friend_item_image"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/blank_profile_rounded"/>
 
     <ImageView
         android:id="@+id/online_status"
