--- a/SportsSideKick/app/src/main/res/layout/fragment_sign_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,12 +7,11 @@
     <LinearLayout
         android:layout_width="@dimen/sign_up_container_width"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:background="@drawable/sign_up_background"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_marginTop="@dimen/margin_60"
-        android:layout_marginBottom="@dimen/margin_60">
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/sign_up_facebook"
