--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -3,7 +3,8 @@
     android:layout_width="500dp"
     android:layout_marginTop="@dimen/margin_60"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clickable="true">
 
 
     <!-- TOP BUTTONS CONTAINER -->
