--- a/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
@@ -476,13 +476,25 @@
             android:src="@drawable/edit_button" />
 
         <ImageButton
+            android:id="@+id/reset_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginStart="@dimen/margin_10"
+            android:background="@null"
+            android:scaleType="centerInside"
+            android:src="@drawable/reset_button"
+            android:layout_toEndOf="@id/edit_button"/>
+
+        <ImageButton
             android:id="@+id/logout_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
             android:background="@null"
-            android:layout_toRightOf="@id/edit_button"
+            android:layout_toEndOf="@id/reset_button"
             android:scaleType="centerInside"
             android:src="@drawable/logout_button" />
     </RelativeLayout>
